--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusTime - Employee Timesheet Management</title>
+    <title>NexusTime - All-in-One Time Tracking, Scheduling, & Payroll</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -38,41 +38,51 @@
         <section class="hero-bg">
             <div class="container mx-auto px-6 py-24 text-center">
                 <h2 class="text-4xl md:text-6xl font-extrabold text-white leading-tight">
-                    Effortless Time Tracking for Modern Teams
+                    The All-in-One Workforce Platform
                 </h2>
-                <p class="mt-4 text-lg text-gray-400 max-w-2xl mx-auto">
-                    NexusTime helps you manage employee timesheets, streamline payroll, and gain valuable insights into your team's productivity.
+                <p class="mt-4 text-lg text-gray-400 max-w-3xl mx-auto">
+                    NexusTime combines time tracking, employee scheduling, task management, and integrated payroll into a single, effortless platform.
                 </p>
                 <div class="mt-8">
                     <a href="app.html#signup" class="cta-button px-8 py-4 rounded-lg font-semibold text-lg inline-block">Get Started for Free</a>
-                    <p class="mt-2 text-sm text-gray-500">No credit card required.</p>
+                    <p class="mt-2 text-sm text-gray-500">No credit card required. Free forever for individuals.</p>
                 </div>
             </div>
         </section>
         <section class="py-20">
             <div class="container mx-auto px-6">
-                <div class="text-center mb-12">
+                <div class="text-center mb-16">
                      <h3 class="text-3xl md:text-4xl font-bold text-white">A Better Way to Work</h3>
                     <p class="text-gray-400 mt-2">Discover how NexusTime can transform your business operations.</p>
                 </div>
-                <div class="grid md:grid-cols-2 gap-8 items-center">
+                <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="text-left">
                         <h4 class="text-2xl font-bold text-white mb-4">Powerful Features, Simple Interface</h4>
-                        <p class="text-gray-400 mb-6">From one-click time entry to automated reports, we've built the tools you need to manage your team effectively without the complexity. Spend less time on administration and more time growing your business.</p>
-                        <a href="features.html" class="secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Explore Features</a>
+                        <p class="text-gray-400 mb-6">From one-click time entry and dynamic pay stubs to automated reports and advanced security, we've built the tools you need to manage your team effectively without the complexity. Spend less time on administration and more time growing your business.</p>
+                        <a href="features.html" class="secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Explore All Features</a>
                     </div>
                     <div>
-                        <img src="https://placehold.co/600x400/1F2937/34D399?text=Feature+Showcase" alt="Feature Showcase" class="rounded-lg shadow-lg">
+                        <img src="https://placehold.co/600x400/1F2937/34D399?text=Analytics+Dashboard" alt="Feature Showcase" class="rounded-lg shadow-lg">
                     </div>
                 </div>
-                 <div class="grid md:grid-cols-2 gap-8 items-center mt-20">
-                    <div>
-                         <img src="https://placehold.co/600x400/1F2937/34D399?text=Pricing+Plans" alt="Pricing Plans" class="rounded-lg shadow-lg">
+                 <div class="grid md:grid-cols-2 gap-12 items-center mt-20">
+                    <div class="md:order-2">
+                        <h4 class="text-2xl font-bold text-white mb-4">Streamline Payroll & Scheduling</h4>
+                        <p class="text-gray-400 mb-6">Run payroll in minutes with our integrated system. Automatically calculate hours, taxes, and deductions to generate accurate, dynamic pay stubs. Plan your team's week with our intuitive visual scheduler and manage time off requests with ease.</p>
+                        <a href="features.html#payroll" class="secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Learn About Payroll</a>
                     </div>
+                    <div class="md:order-1">
+                         <img src="https://placehold.co/600x400/1F2937/34D399?text=Payroll+and+Scheduling" alt="Payroll and Scheduling" class="rounded-lg shadow-lg">
+                    </div>
+                </div>
+                 <div class="grid md:grid-cols-2 gap-12 items-center mt-20">
                     <div class="text-left">
                         <h4 class="text-2xl font-bold text-white mb-4">Pricing That Scales With You</h4>
-                        <p class="text-gray-400 mb-6">Whether you're a small startup or a large enterprise, we have a plan that fits your needs. Our transparent pricing means no surprises, just powerful software at a fair price.</p>
-                        <a href="pricing.html" class="secondary-button px-6 py-3 rounded-lg font-semibold inline-block">View Pricing</a>
+                        <p class="text-gray-400 mb-6">Whether you're a solo freelancer or a large enterprise, we have a plan that fits your needs. Our transparent pricing means no surprises, just powerful software at a fair price. Start free and upgrade only when you need to.</p>
+                        <a href="pricing.html" class="secondary-button px-6 py-3 rounded-lg font-semibold inline-block">View Pricing Plans</a>
+                    </div>
+                     <div>
+                         <img src="https://placehold.co/600x400/1F2937/34D399?text=Flexible+Pricing+Tiers" alt="Pricing Plans" class="rounded-lg shadow-lg">
                     </div>
                 </div>
             </div>
