--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
         .cta-button:hover { transform: translateY(-2px); box-shadow: 0 4px 20px rgba(52, 211, 153, 0.4); }
         .secondary-button { background-color: transparent; border: 1px solid #34D399; color: #34D399; transition: all 0.3s ease; }
         .secondary-button:hover { background-color: #34D399; color: #111827; }
-        .form-input, .form-select { background-color: #1F2937; border: 1px solid #374151; color: #E5E7EB; border-radius: 0.5rem; }
-        .form-input:focus, .form-select:focus { outline: none; border-color: #34D399; box-shadow: 0 0 0 2px rgba(52, 211, 153, 0.5); }
+        .form-input, .form-textarea, .form-select { background-color: #1F2937; border: 1px solid #374151; color: #E5E7EB; border-radius: 0.5rem; }
+        .form-input:focus, .form-textarea:focus, .form-select:focus { outline: none; border-color: #34D399; box-shadow: 0 0 0 2px rgba(52, 211, 153, 0.5); }
         .form-select { -webkit-appearance: none; -moz-appearance: none; appearance: none; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2334D399'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.5 8.25l-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E"); background-repeat: no-repeat; background-position: right 0.75rem center; background-size: 1.5em 1.5em; padding-right: 2.5rem; }
     </style>
 </head>
@@ -41,7 +41,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h3 class="text-3xl md:text-4xl font-bold text-white">Get In Touch</h3>
-                    <p class="text-gray-400 mt-2">We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+                    <p class="text-gray-400 mt-2">Questions about our plans, features, or anything else? We'd love to hear from you.</p>
                 </div>
                 <div class="max-w-xl mx-auto card p-8 rounded-xl">
                     <form id="contact-form">
@@ -57,15 +57,15 @@
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
                             <div>
-                                <label for="phone" class="block text-gray-300 mb-2">Phone Number</label>
+                                <label for="phone" class="block text-gray-300 mb-2">Phone Number (Optional)</label>
                                 <input type="tel" id="phone" class="w-full p-3 form-input" placeholder="(123) 456-7890">
                             </div>
                             <div>
                                 <label for="reason" class="block text-gray-300 mb-2">Reason for Contact</label>
                                 <select id="reason" class="w-full p-3 form-select">
                                     <option value="general">General Inquiry</option>
-                                    <option value="sales">Sales</option>
-                                    <option value="support">Support</option>
+                                    <option value="sales">Sales & Demo Request</option>
+                                    <option value="support">Technical Support</option>
                                     <option value="partnership">Partnership</option>
                                 </select>
                             </div>
@@ -73,7 +73,7 @@
                         <div id="dynamic-fields-container" class="space-y-4 mb-4"></div>
                         <div class="mb-6">
                             <label for="message" class="block text-gray-300 mb-2">Message</label>
-                            <textarea id="message" rows="4" class="w-full p-3 form-input" placeholder="Your message..." required></textarea>
+                            <textarea id="message" rows="4" class="w-full p-3 form-textarea" placeholder="Your message..." required></textarea>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="cta-button px-8 py-3 rounded-lg font-semibold">Send Message</button>
@@ -127,13 +127,9 @@
                     <div>
                         <label class="block text-gray-300 mb-2">Are you an existing customer?</label>
                         <div class="flex items-center space-x-4">
-                            <label><input type="radio" name="existing-customer" value="yes" class="mr-2"> Yes</label>
-                            <label><input type="radio" name="existing-customer" value="no" class="mr-2"> No</label>
+                            <label class="flex items-center"><input type="radio" name="existing-customer" value="yes" class="mr-2 h-4 w-4 bg-gray-700 border-gray-600 text-emerald-500 focus:ring-emerald-500"> Yes</label>
+                            <label class="flex items-center"><input type="radio" name="existing-customer" value="no" class="mr-2 h-4 w-4 bg-gray-700 border-gray-600 text-emerald-500 focus:ring-emerald-500"> No</label>
                         </div>
-                    </div>
-                    <div>
-                        <label for="screenshot" class="block text-gray-300 mb-2">Attach a Screenshot (optional)</label>
-                        <input type="file" id="screenshot" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-emerald-50 file:text-emerald-700 hover:file:bg-emerald-100">
                     </div>
                 `,
                 partnership: `
@@ -159,7 +155,7 @@
             };
 
             reasonSelect.addEventListener('change', updateContactForm);
-            updateContactForm();
+            // No need for initial call, as 'general' is default and has no dynamic fields.
         });
     </script>
 </body>
