--- a/settings.html
+++ b/settings.html
@@ -37,8 +37,7 @@
         input:checked + .toggle-slider:before { transform: translateX(22px); }
         .loader { border: 4px solid #f3f3f3; border-top: 4px solid #34D399; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 2rem auto; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        .modal-overlay { position: fixed; inset: 0; display: flex; align-items: center; justify-content: center; background-color: rgba(17, 24, 39, 0.8); backdrop-filter: blur(4px); z-index: 500; }
-
+        .modal-overlay { position: fixed; inset: 0; display: flex; align-items-center; justify-content: center; background-color: rgba(17, 24, 39, 0.8); backdrop-filter: blur(4px); z-index: 500; }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
@@ -243,7 +242,6 @@
 
         function renderProfileSettings() {
             const container = document.getElementById('profile-settings-tab');
-            const prefs = currentUserData.preferences || {};
             container.innerHTML = `
                 <form id="profile-settings-form" class="space-y-12">
                      <div>
@@ -352,7 +350,7 @@
         }
 
         function renderBillingDetailsCard() {
-            const card = document.getElementById('billing-details-card');
+            const cardContainer = document.getElementById('billing-details-card');
             const planName = currentUserData.plan || 'Free';
             const plan = PLAN_DETAILS[planName];
             const nextBillingDate = currentUserData.nextBillingDate ? new Date(currentUserData.nextBillingDate).toLocaleDateString() : 'N/A';
@@ -361,7 +359,7 @@
             const userPrice = plan.pricePerUser || 0;
             const totalCost = basePrice + (userCount * userPrice);
 
-            card.innerHTML = `
+            cardContainer.innerHTML = `
                 <h3 class="text-xl font-semibold text-white mb-2">Current Subscription</h3>
                 <div class="card p-8">
                     <div class="flex justify-between items-start">
@@ -407,12 +405,12 @@
 
         // --- Settings Form Handlers ---
         
-        async function handleSaveProfileSettings(e) { /* ... same as before ... */ }
-        async function handleSaveWorkspaceSettings(e) { /* ... same as before ... */ }
-        async function handleSaveDeductionTemplate(newTemplate) { /* ... same as before ... */ }
-        async function handleRemoveDeductionTemplate(indexToRemove) { /* ... same as before ... */ }
-        async function initiatePlanChange(newPlanName) { /* ... same as before ... */ }
-        function handleDeleteWorkspace() { /* ... same as before ... */ }
+        async function handleSaveProfileSettings(e) { e.preventDefault(); /* ... Logic ... */ }
+        async function handleSaveWorkspaceSettings(e) { e.preventDefault(); /* ... Logic ... */ }
+        async function handleSaveDeductionTemplate(newTemplate) { /* ... Logic ... */ }
+        async function handleRemoveDeductionTemplate(indexToRemove) { /* ... Logic ... */ }
+        async function initiatePlanChange(newPlanName) { /* ... Logic ... */ }
+        function handleDeleteWorkspace() { /* ... Logic ... */ }
     
     </script>
 </body>
